fixed draft and publish center alignment issue

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -542,3 +542,9 @@ form {
     }
 
 }
+
+@media (max-width: 400px) {
+    .signin-field-buttons {
+        padding: 0px;
+    }
+}
